--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ networks:
     driver: bridge
 
 services:
-  mariadb:
-    image: 'bitnami/mariadb:latest'
+  postgresql:
+    image: 'bitnami/postgresql:latest'
     environment:
-      - MARIADB_ROOT_USER=root
-      - MARIADB_ROOT_PASSWORD=zeManel
+        - POSTGRESQL_USERNAME=ze
+        - POSTGRESQL_PASSWORD=zeManel
+        - POSTGRESQL_DATABASE=postgresql
     networks:
       - app-tier
     volumes:
-      - /home/mike/workspace/git/airflow_poc/airflow_poc/db:/bitnami/mariadb
+      - /home/mike/workspace/git/airflow_poc/airflow_poc/db:/bitnami/postgresql
+      - /home/mike/workspace/git/airflow_poc/airflow_poc/db/conf/:/bitnami/postgresql/conf/
